--- a/qt/Player/mainwindow.ui
+++ b/qt/Player/mainwindow.ui
@@ -31,14 +31,41 @@
     <height>24</height>
    </size>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QPushButton" name="pushButtonStart">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>330</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonEnd">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>330</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>End</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>506</width>
-     <height>23</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
@@ -48,7 +75,14 @@
     <addaction name="Open_red"/>
     <addaction name="Close_Red"/>
    </widget>
+   <widget class="QMenu" name="menuConfigure">
+    <property name="title">
+     <string>Configure</string>
+    </property>
+    <addaction name="actionURL"/>
+   </widget>
    <addaction name="menu"/>
+   <addaction name="menuConfigure"/>
   </widget>
   <action name="actionOpen">
    <property name="text">
@@ -65,8 +99,12 @@
     <string>Close(&amp;C)</string>
    </property>
   </action>
+  <action name="actionURL">
+   <property name="text">
+    <string>URl</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
 </ui>
-
